[package]
name = "redo"
version = "0.1.0"
authors = ["Ross Light <ross@zombiezen.com>"]
edition = "2018"

[features]
debug-jobserver = []

[dependencies]
clap = { version = "~2.27.0", default-features = false }
common-path = "1.0.0"
failure = "0.1.6"
futures = "0.3.17"
lazy_static = "1.4.0"
libc = "0.2.67"
libsqlite3-sys = "0.17.1"
nix = "0.21.0"
rand = "0.8.4"
rusqlite = "0.21.0"
tempfile = "3.2.0"
term_size = "0.3.2"
zombiezen-const-cstr = "1.0"
