[package]
name = "redo"
version = "0.2.2-alpha1"
authors = ["Ross Light <ross@zombiezen.com>"]
edition = "2018"
repository = "https://github.com/zombiezen/redo-rs"
license = "Apache-2.0"
description = "Port of apenwarr's redo to Rust"

[features]
debug-jobserver = []

[dependencies]
anyhow = "1.0"
clap = { version = "~2.27.0", default-features = false }
common-path = "1.0.0"
futures = "0.3.17"
lazy_static = "1.4.0"
libc = "0.2.67"
libsqlite3-sys = "0.17.1"
nix = "0.21.0"
ouroboros = "0.10.0"
rand = "0.8.4"
rusqlite = { version = "0.21.0", features = ["bundled"] }
sha-1 = "0.9.8"
tempfile = "3.2.0"
term_size = "0.3.2"
zombiezen-const-cstr = "1.0"
